@@ -14,6 +14,8 @@ REMOVED:
 
 FIXED:
 
+* Fixed issue with reporter websocket connection being lost.
+
 SECURITY:
 
 DOCUMENTATION:
